cluster/mc/intro.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: intro
  labels:
    app: intro
    service: web
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: intro
  template:
    metadata:
      labels:
        app: intro
        service: web
    spec:
      securityContext:
        runAsUser: 101
        runAsGroup: 101
      volumes:
        - name: tmp
          emptyDir:
            medium: Memory
      containers:
        - name: intro
          image: ghcr.io/realliance/mc-intro:main
          ports:
            - containerPort: 8080
              protocol: TCP
          securityContext:
            readOnlyRootFilesystem: true
            runAsUser: 101
            runAsGroup: 101
          volumeMounts:
            - mountPath: /tmp
              name: tmp
---
apiVersion: v1
kind: Service
metadata:
  name: intro
  labels:
    service: web
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: intro
