cluster/mc/server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: mc
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      nodeName: luma
      containers:
        - name: server
          image: docker.io/itzg/minecraft-server@sha256:f5b00d8caf9c78bb697a9cc0cd5615e5dfc061d9d395d62a15776990c4a8ebfb
          ports:
            - containerPort: 25565
            - containerPort: 25575
            - containerPort: 8100
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          hostPath:
            path: /static/mc
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: mc
spec:
  type: LoadBalancer
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 25565
---
apiVersion: v1
kind: Service
metadata:
  name: bluemap
  namespace: mc
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 8100
