cluster/mc/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mc
  namespace: mc
  annotations:
    external-dns.alpha.kubernetes.io/target: luma.chrismiller.xyz
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - map.mc.luma.chrismiller.xyz
      secretName: mc-luma-tls
  rules:
    - host: map.mc.luma.chrismiller.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bluemap
                port:
                  number: 8100
